# Verity

./: .gitignore  135.md  README.md  main.py  pyproject.toml
backend/: .env.example  README.md  pyproject.toml
backend/app/: config.py  graph.py  main.py
backend/app/agents/: quality_evaluator.py  search_agent.py  synthesis_agent.py
backend/app/api/: verity.py
backend/app/api/routes/: truthcheck.py  verity.py
backend/app/db/: init_db.py  session.py
backend/app/models/: database.py  state.py
backend/app/services/: cache.py  claim_validator.py
backend/app/tools/: pubmed.py
backend/app/utils/: normalize.py  rate_limit.py  retry.py  sanitize.py
backend/tests/: test_full_pipeline.py  test_imports.py  test_langgraph.py  test_pubmed.py  test_quality_evaluator.py  test_search_agent.py  test_synthesis_quick.py
frontend/: package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: ClaimForm.tsx  LoadingState.tsx  ResultsDisplay.tsx
